# ChangeLog for media-tv/nuvexport
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-tv/cvs-repo/gentoo-x86/media-tv/nuvexport/Attic/ChangeLog,v 1.23 2005/05/07 06:45:48 cardoe Exp $

*nuvexport-0.2_pre20050502 (07 May 2005)

  07 May 2005; <cardoe@gentoo.org> +nuvexport-0.2_pre20050502.ebuild:
  rev bump

  13 Apr 2005; Simon Stelling <blubb@gentoo.org>
  nuvexport-0.2_pre20050331.ebuild:
  added ~amd64

*nuvexport-0.2_pre20050331 (01 Apr 2005)

  01 Apr 2005; Doug Goldstein <cardoe@gentoo.org>
  -nuvexport-0.2_pre20050311-r1.ebuild, +nuvexport-0.2_pre20050331.ebuild:
  rev bump

  26 Mar 2005; Doug Goldstein <cardoe@gentoo.org>
  nuvexport-0.2_pre20050317.ebuild:
  fix DEPENDs

*nuvexport-0.2_pre20050317 (24 Mar 2005)

  24 Mar 2005; Doug Goldstein <cardoe@gentoo.org>
  +nuvexport-0.2_pre20050317.ebuild:
  rev bump

*nuvexport-0.2_pre20050311-r1 (15 Mar 2005)

  15 Mar 2005; Doug Goldstein <cardoe@gentoo.org>
  -nuvexport-0.2_pre20050311.ebuild, +nuvexport-0.2_pre20050311-r1.ebuild:
  corrected deps

*nuvexport-0.2_pre20050311 (15 Mar 2005)

  15 Mar 2005; Doug Goldstein <cardoe@gentoo.org>
  -nuvexport-0.2_pre20050207.ebuild, -nuvexport-0.2_pre20050212.ebuild,
  -nuvexport-0.2_pre20050221.ebuild, -nuvexport-0.2_pre20050309.ebuild,
  +nuvexport-0.2_pre20050311.ebuild:
  rev bump
  update ebuild to check USE flags for ffmpeg
  require version of ffmpeg that actually works

*nuvexport-0.2_pre20050309 (11 Mar 2005)

  11 Mar 2005; Doug Goldstein <cardoe@gentoo.org>
  +nuvexport-0.2_pre20050309.ebuild:
  rev bump

*nuvexport-0.2_pre20050221 (23 Feb 2005)

  23 Feb 2005; Doug Goldstein <cardoe@gentoo.org>
  +nuvexport-0.2_pre20050221.ebuild:
  fixed deps
  rev bump

  13 Feb 2005; Sven Wegener <swegener@gentoo.org> :
  Fixed digest.

*nuvexport-0.2_pre20050212 (12 Feb 2005)

  12 Feb 2005; Doug Goldstein <cardoe@gentoo.org>
  +nuvexport-0.2_pre20050212.ebuild:
  revision bump
  added new deps
