@@ -1,1 +1,0 @@
-MD5 1f07543b99659336d0304c1e6ee1de94 nuvexport-0.2-0.20050317.cvs.tar.bz2 35617
