@@ -1,1 +1,0 @@
-MD5 dbf7f5a5af245966057ff26d48f98465 nuvexport-0.2-0.20050331.cvs.tar.bz2 35915
