@@ -1,0 +1,1 @@
+MD5 c6685ef1407f2ff81cc8588204af0074 nuvexport-0.2-0.20050511.cvs.tar.bz2 54591
